<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.sender.SenderFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/sender_image"
        android:src="@drawable/sender_screen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/sender_btn0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn0"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn2"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn4"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn6"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn8"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn10"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn12"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn14"
                android:background="@drawable/transparent_button"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/sender_btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn1"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn3"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn5"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn7"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn9"
                android:background="@drawable/transparent_button"/>
            <Button
                android:id="@+id/sender_btn11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn11"
                android:background="@drawable/transparent_button"/>

            <Button
                android:id="@+id/sender_btn13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn13"
                android:background="@drawable/transparent_button"/>

            <Button
                android:id="@+id/sender_btn15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/sender_btn15"
                android:background="@drawable/transparent_button"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/message_sent_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_sent"
            android:textColor="@color/white"
            android:fontFamily="@font/gilroy_bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:visibility="invisible"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/message_textfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bordered_textfield"
                android:hint="@string/message_textfield"
                android:textColorHint="@color/white"
                android:fontFamily="@font/gilroy_regular"
                android:textColor="@color/white"
                android:paddingStart="20dp"
                android:inputType="text"
                android:autofillHints="false"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/send_message_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_weight="4.5"
                android:background="@drawable/transparent_button"
                android:src="@android:drawable/ic_menu_send"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <Button
            android:id="@+id/sender_back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/back_btn"/>

    </LinearLayout>

</RelativeLayout>