<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.MainFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/main_image"
        android:src="@drawable/main_screen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <TextView
            android:id="@+id/login_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="16sp"
            android:text="@string/your_login_is"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/receive_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_button"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/gilroy_regular"
            android:layout_marginBottom="10dp"
            android:text="@string/accept_btn"/>
        <Button
            android:id="@+id/send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_button"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/send_btn"/>
        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/logout_text"/>

    </LinearLayout>

</RelativeLayout>