<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.receiver.ReceiverFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/receiver_image"
        android:src="@drawable/receiver_screen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <EditText
            android:id="@+id/manager_login_textfield"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bordered_textfield"
            android:hint="@string/manager_login"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:fontFamily="@font/gilroy_regular"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:autofillHints="true"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/connect_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_button"
            android:fontFamily="@font/gilroy_regular"
            android:layout_marginBottom="10dp"
            android:text="@string/connect"/>

        <Button
            android:id="@+id/receiver_back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/back_btn"/>

    </LinearLayout>

</RelativeLayout>