<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.authorization.AuthorizationFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/auth_image"
        android:src="@drawable/authorization_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <EditText
                android:id="@+id/login_textfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bordered_textfield"
                android:layout_marginBottom="10dp"
                android:paddingStart="20dp"
                android:fontFamily="@font/gilroy_regular"
                android:hint="@string/login_hint"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:autofillHints="true"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/password_textfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bordered_textfield"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:fontFamily="@font/gilroy_regular"
                android:hint="@string/password_hint"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:autofillHints="true"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/error_auth_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F44E4E"
                android:text="@string/error_auth"
                android:textAlignment="center"
                android:fontFamily="@font/gilroy_bold"
                android:visibility="invisible"
                android:layout_marginTop="5dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/signin_button"
                android:fontFamily="@font/gilroy_bold"
                android:background="@drawable/bordered_button" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_button"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/black"
                android:background="@drawable/transparent_button" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>