<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.message.MessageFragment"
    android:keepScreenOn="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/receiver_image"
        android:src="@drawable/receiver_screen"/>

    <LinearLayout
        android:id="@+id/message_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:alpha="0.5"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/message_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="70sp"
            android:textColor="@color/white"
            android:text="@string/message_receiver"
            android:fontFamily="@font/gilroy_bold"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/connected_to_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/login_connected"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/message_back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/back_btn"/>

    </LinearLayout>

</RelativeLayout>